fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,7 @@
   :where([lang="en"], :not([lang])) h2 {
      font-family: "Noto Sans";
      line-height: 144%;
-    
+     font-size: clamp(1.4rem, 1.2vw,  2rem);
      letter-spacing: -0.04em;
      font-variation-settings: 'wdth' 95;
   }
@@ -169,8 +169,8 @@
 
   :where([lang="en"], :not([lang])) p {
     font-family: "Noto Sans";
-    line-height: 168%;
-    font-size: clamp(.9rem, 1vw,  1.05rem);
+    line-height: 174%;
+    font-size: clamp(1rem, 1.1vw,  1.1rem);
     letter-spacing: -0.02em;
     font-variation-settings: 'wdth' 95, 'wght' 400;
   }
@@ -183,7 +183,7 @@
     line-height: 112%;
     font-size: clamp(2.5rem, 3vw,  4.5rem);
     letter-spacing: 0em; /* Devanagari usually has 0 letter-spacing */
-    font-variation-settings: 'wdth' 85, 'wght' 800;
+    font-variation-settings: 'wdth' 85, 'wght' 700;
   }
   [lang="hi"] h2, [lang="mr"] h2 {
     font-family: var(--font-noto-sans-devanagari), 'Noto Sans Devanagari', sans-serif !important;
@@ -471,8 +471,8 @@
     font-family: var(--font-noto-sans-oriya), 'Noto Sans Oriya', sans-serif !important;
     line-height: 112%;
     font-size: clamp(2.5rem, 3vw,  4.5rem);
-    letter-spacing: 0em;
-    font-variation-settings: 'wdth' 85, 'wght' 800;
+    letter-spacing: 0.05rem;
+    font-variation-settings: 'wdth' 85, 'wght' 700;
   }
   [lang="or"] h2 {
     font-family: var(--font-noto-sans-oriya), 'Noto Sans Oriya', sans-serif !important;
